<resources>
    <string name="app_name">Registering</string>
    <string name="action_settings">Settings</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="test">Test</string>
    <string name="password">Password</string>
    <string name="create">create</string>
    <string name="Register">Register</string>
    <string name="tDifferentUser">User is already exists, please create user with different username</string>
    <string name="passwordEmpty">Password field is empty</string>
    <string name="userEmpty">Username field is empty</string>
    <string name="sqlite">SQLite DB</string>
    <string name="storio">Storio DB</string>
    <string name="room">Room DB</string>
    <string name="sign_in">Sign in</string>
    <string name="tErrorSelect">Please select your database store</string>
    <string name="tErrorLogin">Username or password is invalid</string>

</resources>
