<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:paddingTop="@dimen/top_margin"
        android:paddingLeft="@dimen/top_margin"
        android:paddingRight="@dimen/top_margin"
        android:layout_height="match_parent">


    <EditText
            android:id="@+id/register_username_field"
            android:layout_width="120dp"
            android:paddingTop="@dimen/top_margin"
            android:hint="@string/username"
            android:layout_height="wrap_content"/>


    <EditText
            android:id="@+id/register_password_field"
            android:layout_width="120dp"
            android:hint="@string/password"
            android:layout_below="@+id/register_username_field"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/register_button"
            android:layout_width="300dp"
            android:text="@string/Register"
            android:layout_marginTop="24dp"
            android:layout_below="@+id/register_password_field"
            android:layout_height="wrap_content"/>

    <RadioGroup android:layout_width="wrap_content"
                android:id="@+id/group_box_id"
                android:layout_marginTop="65dp"
                android:layout_marginStart="50dp"
                android:layout_toRightOf="@id/register_username_field"
                android:layout_height="wrap_content">

        <RadioButton
                android:id="@+id/radio_sqlite"
                android:layout_width="wrap_content"
                android:text="@string/sqlite"
                android:layout_height="wrap_content"/>
        <RadioButton
                android:id="@+id/radio_storio"
                android:text="@string/storio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <RadioButton
                android:id="@+id/radio_room"
                android:text="@string/room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </RadioGroup>


</RelativeLayout>
