<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:paddingBottom="@dimen/normal_margin"
        android:paddingLeft="@dimen/normal_margin"
        android:paddingRight="@dimen/normal_margin"
        android:layout_height="match_parent">

    <RelativeLayout android:layout_width="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="@dimen/normal_margin"
                    android:layout_centerVertical="true"
                    android:layout_centerInParent="true"
                    android:layout_height="wrap_content">

        <EditText
                android:id="@+id/login_username_field"
                android:layout_width="match_parent"
                android:hint="@string/username"
                android:layout_height="wrap_content"/>


        <EditText
                android:id="@+id/login_password_field"
                android:layout_width="match_parent"
                android:hint="@string/password"
                android:layout_below="@+id/login_username_field"
                android:layout_height="wrap_content"/>

        <Button
                android:id="@+id/login_button"
                android:layout_marginTop="@dimen/normal_margin"
                android:layout_width="match_parent"
                android:text="@string/sign_in"
                android:layout_below="@+id/login_password_field"
                android:layout_height="wrap_content"/>


    </RelativeLayout>


</RelativeLayout>
